--- a/client/src/app/resource-allocate/resource-allocate.component.scss
+++ b/client/src/app/resource-allocate/resource-allocate.component.scss
@@ -9,6 +9,15 @@ h1 {
   color: #2c3e50;
 }
 
+
+h1 {
+  color: rgb(44, 44, 44);
+  font-weight: 700;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+  font-size: 2.5rem;
+  margin-bottom: 3rem;
+}
+
 .card {
   border: none;
   border-radius: 12px;
