Fix: Make staff assignment, messaging, and booking buttons functional
- Removed data-bs-toggle/target attributes that were preventing click handlers
- Added STAFF role to Action column for messaging access
- Fixed CLIENT booking button visibility
- All modal buttons now properly trigger their respective functions
- PLANNER: Can assign staff and send messages
- CLIENT: Can book events and send messages
- STAFF: Can view and send messages

--- a/client/src/app/view-events/view-events.component.html
+++ b/client/src/app/view-events/view-events.component.html
@@ -57,7 +57,7 @@
                             <th scope="col">Status</th>
                             <th scope="col">Allocated Resources</th>
                             <th scope="col" *ngIf="roleName === 'PLANNER'">Assigned Staff</th>
-                            <th scope="col" *ngIf="roleName === 'PLANNER' || roleName === 'CLIENT'">Action</th>
+                            <th scope="col" *ngIf="roleName === 'PLANNER' || roleName === 'CLIENT' || roleName === 'STAFF'">Action</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -96,8 +96,7 @@
                                     {{ event.assignedStaff.fullName || event.assignedStaff.username }}
                                 </span>
                                 <ng-template #noStaff>
-                                    <button class="btn btn-sm btn-secondary" (click)="openStaffAssignment(event)" 
-                                            data-bs-toggle="modal" data-bs-target="#staffAssignModal">
+                                    <button class="btn btn-sm btn-secondary" (click)="openStaffAssignment(event)">
                                         Assign Staff
                                     </button>
                                 </ng-template>
@@ -107,18 +106,20 @@
                                         data-bs-toggle="modal" data-bs-target="#updateModal">
                                     Update
                                 </button>
-                                <button class="btn btn-sm btn-info" (click)="openMessaging(event)" 
-                                        data-bs-toggle="modal" data-bs-target="#messagingModal">
+                                <button class="btn btn-sm btn-info" (click)="openMessaging(event)">
                                     Messages
                                 </button>
                             </td>
                             <td *ngIf="roleName === 'CLIENT'">
-                                <button class="btn btn-sm btn-success me-1" (click)="openBookingForm(event)" 
-                                        data-bs-toggle="modal" data-bs-target="#bookingModal">
+                                <button class="btn btn-sm btn-success me-1" (click)="openBookingForm(event)">
                                     Book Event
                                 </button>
-                                <button class="btn btn-sm btn-info" (click)="openMessaging(event)" 
-                                        data-bs-toggle="modal" data-bs-target="#messagingModal">
+                                <button class="btn btn-sm btn-info" (click)="openMessaging(event)">
+                                    Messages
+                                </button>
+                            </td>
+                            <td *ngIf="roleName === 'STAFF'">
+                                <button class="btn btn-sm btn-info" (click)="openMessaging(event)">
                                     Messages
                                 </button>
                             </td>
